--- a/templates/base.html
+++ b/templates/base.html
@@ -1,27 +1,47 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#062e3f">
-    <meta name="Description" content="A dynamic and aesthetic To-Do List WebApp.">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#062e3f" />
+    <meta
+      name="Description"
+      content="A dynamic and aesthetic To-Do List WebApp."
+    />
 
     <!-- Google Font: Quick Sand -->
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
+    {% comment %}
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    {% endcomment %}
 
     <!-- font awesome (https://fontawesome.com) for basic icons; source: https://cdnjs.com/libraries/font-awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+    {% comment %}
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
+      integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o="
+      crossorigin="anonymous"
+    />
+    {% endcomment %} {% comment %}
+    <link rel="icon" type="image/png" href="image/favicon.png" />
+    {% endcomment %}
+    <link
+      rel="icon"
+      type="image/png"
+      href="{% static '/images/favicon.png' %}"
+    />
+    <link rel="stylesheet" href="CSS/main.css" />
+    <link rel="stylesheet" href="CSS/corner.css" />
+    <base href="{% static '/' %}" />
 
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
-    <link rel="stylesheet" href="CSS/main.css">
-    <link rel="stylesheet" href="CSS/corner.css">
     <title>JUST DO IT</title>
-
-</head>
-<body>
-    {% {% block content %}
-    {% endblock content %} %}
-    <script src="JS/main.js" type="text/javascript"> </script>
-</body>
+  </head>
+  <body>
+    {% block content %} {% endblock content %}
+    <script src="JS/main.js" type="text/javascript"></script>
+  </body>
 </html>
-
