--- a/templates/base.html
+++ b/templates/base.html
@@ -9,39 +9,42 @@
       name="Description"
       content="A dynamic and aesthetic To-Do List WebApp."
     />
-
-    <!-- Google Font: Quick Sand -->
-    {% comment %}
-    <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    {% endcomment %}
-
-    <!-- font awesome (https://fontawesome.com) for basic icons; source: https://cdnjs.com/libraries/font-awesome -->
-    {% comment %}
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
-      integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o="
-      crossorigin="anonymous"
-    />
-    {% endcomment %} {% comment %}
+    <base href="{% static '/' %}" />
     <link rel="icon" type="image/png" href="image/favicon.png" />
-    {% endcomment %}
     <link
       rel="icon"
       type="image/png"
       href="{% static '/images/favicon.png' %}"
     />
-    <link rel="stylesheet" href="CSS/main.css" />
-    <link rel="stylesheet" href="CSS/corner.css" />
-    <base href="{% static '/' %}" />
-
+    <link rel="stylesheet" href="CSS/style.css" />
     <title>JUST DO IT</title>
   </head>
   <body>
-    {% block content %} {% endblock content %}
+    <li>
+      {% if user.is_authenticated %}
+      <form
+        id="logout-form"
+        action="{% url 'accounts:logout' %}"
+        method="post"
+        style="display: inline"
+      >
+        {% csrf_token %}
+        <button type="submit" class="default-button default-button-3">
+          <span>خروج</span>
+        </button>
+      </form>
+      {% else %}
+      <a
+        class="default-button default-button-3"
+        href="{% url 'accounts:login' %}"
+      >
+        <span>ورود</span>
+      </a>
+      {% endif %}
+    </li>
+    {% block content %} 
+    
+    {% endblock content %}
     <script src="JS/main.js" type="text/javascript"></script>
   </body>
 </html>
